# SwiftifySFML_v0_1

./: Application.cpp  Application.h  CMakeLists.txt  Container.cpp  Container.h  Enumerations.h  README.md  Screen.cpp  Screen.h  UIComponent.cpp  UIComponent.h  main.cpp
